[package]
name = "seq_geom_xform"
version = "0.2.0"
edition = "2021"
authors = [
  "Rob Patro <rob@cs.umd.edu>"
]
description = "Transform/normalize complex single-cell fragment geometries into simple geometries."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/seq_geom_xform"
homepage = "https://github.com/COMBINE-lab/seq_geom_xform"
include = [
  "/src/*.rs",
  "/src/lib/*.rs",
  "/src/bin/*.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE",
  "/CONTRIBUTING.md",
  "/CODE_OF_CONDUCT.md",
]
keywords = [
  "single-cell",
  "preprocessing",
  "RNA-seq",
]
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "seq_geom_xform"
path = "src/lib.rs"

[[bin]]
name = "seq_xformer"
path = "src/bin/bin.rs"

[dependencies]
seq_geom_parser = { git = "https://github.com/COMBINE-lab/seq_geom_parser", branch = "dev", version = "0.2.1" }
regex = "1.7"
anyhow = "1.0"
needletail = "0.5.0"
clap = { version = "4.1.11", features = ["derive"] }
thousands = "0.2.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = true, features = ["env-filter"] }
tempfile = "3.4.0"
nix = { version = "0.26.2", features = ["fs"] }
